Fix layout issues, see #45

--- a/app/src/styles/main.scss
+++ b/app/src/styles/main.scss
@@ -94,6 +94,12 @@
   background-color: #4a87ee;
 }
 
+.item-input input {
+  background-color: #F2F2F2;
+  padding-left: 10px;
+  padding-right: 10px
+}
+
 
 // fix for side-menu issue on android, see https://github.com/driftyco/ionic/issues/2122
 
